manager/install/cluster-basics/network/policies/deny-all.yml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-all
  namespace: mows-network
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
