manager/install/cluster-basics/network/policies/mows-db-pg.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: allow-api-server
    namespace: mows-db-pg
spec:
    endpointSelector:
        matchLabels:
            k8s:app.kubernetes.io/name: cloudnative-pg
    egress:
        - toEntities:
              - kube-apiserver
