manager/install/cluster-basics/network/policies/mows-network.yml

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-mows-network-to-self-and-cluster
  namespace: mows-network
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
    - toEntities:
        - cluster
