manager/install/cluster-basics/network/policies/mows-storage.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-mows-storage-own-namespace-and-api-server
  namespace: mows-storage
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-storage-dashboard-ingress
  namespace: mows-storage
spec:
  endpointSelector:
    matchLabels:
      k8s:app: longhorn-ui
  ingress:
    - fromEntities:
        - remote-node
